--- a/app/components/Sidebar.css
+++ b/app/components/Sidebar.css
@@ -18,3 +18,8 @@
   background: linear-gradient(90deg, rgba(255, 184, 0, 1) 0%, rgb(206, 209, 113) 100%);
   margin-bottom: 8px;
 }
+
+.exportedPrivKeys {
+  width: 100%;
+  max-height: calc(100vh - 400px);
+}
