--- a/app/app.global.css
+++ b/app/app.global.css
@@ -4,6 +4,11 @@
  */
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
+@font-face {
+  font-family: Roboto;
+  src: url('../resources/Roboto-Regular.ttf') format('truetype');
+}
+
 html {
   overflow: hidden;
 }
