Solid background on sidebar

--- a/app/components/Sidebar.css
+++ b/app/components/Sidebar.css
@@ -15,7 +15,7 @@
 }
 
 .sidebarlogobg {
-  background: linear-gradient(90deg, rgba(255, 184, 0, 1) 0%, rgb(206, 209, 113) 100%);
+  background: #ffb100;
   margin-bottom: 8px;
 }
 
