--- a/app/components/Common.css
+++ b/app/components/Common.css
@@ -205,3 +205,13 @@
   margin: 8px;
   border-bottom: solid 1px grey;
 }
+
+.balancebox {
+  margin: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.containermargin {
+  margin: 16px;
+}
